# rag-test

./: .gitignore  README.md  chunk.py  data.md  embed.py  main.py  main_multi_docs.py  pyproject.toml
data_source/: document1.md  progress_report.txt  research_plan.md  tech_plan.md  technical_doc.md
